--- a/requirements.txt
+++ b/requirements.txt
@@ -46,6 +46,8 @@ htmlmin==0.1.12
 hvplot==0.8.1
 idna==3.4
 ImageHash==4.3.1
+imbalanced-learn==0.9.1
+imblearn==0.0
 importlib-metadata==4.12.0
 iniconfig==1.1.1
 ipykernel==6.16.0
